tests/expectations/compiler/constants/tuple_definition_fail.out
Error [EPAR0370005]: expected an identifier -- found '('
    --> compiler-test:1:7
     |
   1 | const (HELLO,GOODBYE): (u8,u8) = (1u8, 1u8);
     |       ^
